--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -37,6 +37,7 @@ jobs:
     container: yegor256/cam:0.9.2
     steps:
       - uses: actions/checkout@v4
+      - run: apt install python3.10-venv
       - run: make install
       - run: make env lint test
   make-macos:
@@ -49,5 +50,5 @@ jobs:
           website: oracle.com
           release: 22
       - run: sudo chown -R "$(whoami)" /usr/local
-      - run: make install
+      - run: sudo make install
       - run: make env lint test
