make pipeline fixed

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -28,6 +28,7 @@ name: make
   pull_request:
     branches:
       - master
+  workflow_dispatch:
 concurrency:
   group: make-${{ github.ref }}
   cancel-in-progress: true
