--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -34,7 +34,7 @@ concurrency:
 jobs:
   make:
     runs-on: ubuntu-24.04
-    container: yegor256/cam:0.9.2
+    #container: yegor256/cam:0.9.2
     steps:
       - uses: actions/checkout@v4
       - run: make install
