--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -37,7 +37,7 @@ jobs:
     #container: yegor256/cam:0.9.2
     steps:
       - uses: actions/checkout@v4
-      - run: make install
+      - run: sudo make install
       - run: make env lint test
   make-macos:
     runs-on: macos-14
