macos make pipeline fix

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -49,5 +49,10 @@ jobs:
           website: oracle.com
           release: 22
       - run: sudo chown -R "$(whoami)" /usr/local
+      - name: 'Update make using brew'
+        run: brew install make
+      - name: 'Update PATH for make'
+        run: echo 'export PATH="/usr/local/bin:$PATH"' >> $GITHUB_ENV
+      - run: make --version
       - run: sudo make install
       - run: make env lint test
