macos make pipeline fixed

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -51,8 +51,7 @@ jobs:
       - run: sudo chown -R "$(whoami)" /usr/local
       - name: 'Update make using brew'
         run: brew install make
-      - name: 'Update PATH for make'
-        run: echo 'export PATH="/usr/local/opt/make/libexec/gnubin:$PATH"' >> $GITHUB_ENV
-      - run: make --version
-      - run: sudo make install
-      - run: make env lint test
+      
+      - run: gmake --version
+      - run: sudo gmake install
+      - run: gmake env lint test
